[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/BaseEnemy.gd" type="Script" id=3]

[node name="BaseEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 30
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 1, 2.81354 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1, 2.81354 )

[node name="ClickingArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickingArea"]
scale = Vector2( 1, 2.81354 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_right = 64.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = -1.57079
[connection signal="died" from="." to="." method="_on_self_died"]
[connection signal="health_changed" from="." to="." method="_on_self_health_changed"]
[connection signal="input_event" from="ClickingArea" to="." method="_on_ClickingArea_input_event"]
